** (2013-12-30) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update ISC DHCP setup
	- Update certificate setup to use new structure

** (2013-12-19) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update architecture structure (TSAC now)
	- Update DNS (BIND) setup

** (2013-12-17) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add info on audit/syslog
	- Add introduction to architecture structure (TUSAC)

** (2013-12-13) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update platform information

** (2013-12-10) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Move hypervisor as separate chapter
	- Update platform choice, add in PAM info

** (2013-04-06) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update base setup (hypervisor and OS)
	- Use Intro / Architecture / Deployment and uses pattern
	- Update PostgreSQL part (more architectural information,
	  add in pg_rman and pgpool)

** (2013-04-05) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Small updates on database part
	- Introduce architectural information on platform

** (2013-03-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Puppet: more info on local apply

** (2013-02-04) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add info on records/domains/zone/view/instances on DNS

** (2013-01-27) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Paragraph on SSH finger prints in DNS (as example service)

** (2013-01-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add info on git and gitolite

** (2013-01-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Expand on CA certificate server

** (2013-01-04) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update puppet configuration

** (2012-12-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update example puppet settings
	- Add some information on the puppet files (site, node, patterns,
	  modules)

** (2012-12-19) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Architecturing puppet
	- Adding puppet information in cfg/ location

** (2012-12-18) Sven Vermeulen <sven.vermeulen@siphos.be>