@@ -55,15 +55,15 @@
 	offsite knowledge storage ;-)
       </para>
       <para>
-        The version you are reading currently is v0.21 and has been generated
-	on 2013/12/30.
+        The version you are reading currently is v0.22 and has been generated
+	on 2014/01/01.
       </para>
     </abstract>
 
-    <edition>AGLARA v0.21</edition> <!-- Update above paragraph too!! -->
+    <edition>AGLARA v0.22</edition> <!-- Update above paragraph too!! -->
 
     <copyright>
-      <year>2013</year>
+      <year>2012-2014</year>
 
       <holder>Sven Vermeulen</holder>
     </copyright>
