@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="CA Server" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="180" y="90" width="290" height="270" as="geometry"/></mxCell><mxCell id="5" value="openssl&#xa;(cli)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="75" y="60" width="140" height="60" as="geometry"/></mxCell><mxCell id="6" value="Mandatory Access Control" style="whiteSpace=wrap;rotation=-90" vertex="1" parent="2"><mxGeometry x="-70" y="130" width="210" height="25" as="geometry"/></mxCell><mxCell id="11" value="CA files" style="shape=folder;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="85" y="170" width="120" height="70" as="geometry"/></mxCell><mxCell id="12" value="" style="edgeStyle=none" edge="1" parent="2" source="5" target="11"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="160" y="210" as="sourcePoint"/><mxPoint x="260" y="110" as="targetPoint"/></mxGeometry></mxCell><mxCell id="3" value="CA admin" style="shape=actor;whiteSpace=wrap;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="50" y="130" width="40" height="60" as="geometry"/></mxCell><mxCell id="4" value="Security admin" style="shape=actor;whiteSpace=wrap;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="50" y="270" width="40" height="60" as="geometry"/></mxCell><mxCell id="7" value="System&#xa;admin" style="shape=actor;whiteSpace=wrap;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="610" y="195" width="40" height="60" as="geometry"/></mxCell><mxCell id="8" value="" style="edgeStyle=none" edge="1" parent="1" source="7" target="2"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="540" y="410" as="sourcePoint"/><mxPoint x="640" y="310" as="targetPoint"/></mxGeometry></mxCell><mxCell id="9" value="" style="edgeStyle=none" edge="1" parent="1" source="3" target="5"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="170" y="530" as="sourcePoint"/><mxPoint x="270" y="430" as="targetPoint"/></mxGeometry></mxCell><mxCell id="10" value="" style="edgeStyle=none;shadow=0;strokeColor=#FF0000" edge="1" parent="1" source="4" target="5"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="170" y="520" as="sourcePoint"/><mxPoint x="270" y="420" as="targetPoint"/></mxGeometry></mxCell></root></mxGraphModel>
